Load images from Google Drive using iframes

--- a/_posts/2016-07-21-europe.md
+++ b/_posts/2016-07-21-europe.md
@@ -13,7 +13,7 @@ I'm writing the first part of this as I sit on the train on the way to
 Salzburg, there's about an hour left of a trip that takes a little under two
 hours.
 
-I had a very busy three days in Munich, managing to see
+I had three very busy days in Munich, managing to see
 
 * Deutsches Museum
 * Marienplatz
@@ -36,7 +36,7 @@ computers, mathematics, microelectronics (I geeked out a bit in these last
 three), chronometery and geodesy. It is a really big place, you could easily
 spend upwards of an hour in each of those sections. I spent about 6 hours in
 the museum and easily could have spent twice that, though maybe over two days;
-there is only so much museum­ing I can handle.
+there is only so much museum-ing I can handle.
 
 First up on Thursday morning I went to the area of the city where the BMW
 headquarters and factory are located.
@@ -75,7 +75,7 @@ the Englischer Garten.
 The English Gardens are massive, I only walked through half of them in then end
 despite plans to go from one end to the other. There is and really cool spot at
 the start of the gardens where the water flows in (not sure if it's flowing
-through or recycled through the canal system in the park ­ maybe both), there
+through or recycled through the canal system in the park - maybe both), there
 were people surfing there! They've set something up that makes an artificial
 wave across the canal, I got a couple of videos #####.
 
@@ -119,19 +119,19 @@ time from Salzburg to Vienna. I have internet on this train, and it's probably
 faster than what 99% of Australian ISPs provide (thanks Tony). It made me laugh
 when I connected to WiFi and saw this immediately:
 
-#### - image
+<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAZ2ExdmprNlhDcEdSZHJLZlVxeTA1U0hXZ3hv/preview" width="640" height="480"></iframe>
 
 ... 'this is of course free'. In Aus this would cost an arm and a leg and take
 four hours to set up.
 
 During my two days in Salzburg I visited:
 
-* Festung Hohensalzburg ­ a fortress
-* The Domquartier ­ a museum combining the church and residence of the
-  'Prince­Archbishop'
-* Kapuzinerberg ­ a mountain in the middle of town, not as heavily fortified as
+* Festung Hohensalzburg - a fortress
+* The Domquartier - a museum combining the church and residence of the
+  'Prince-Archbishop'
+* Kapuzinerberg - a mountain in the middle of town, not as heavily fortified as
   Festung Hohensalzburg
-* Schloss Mirabell ­ a palace built around 1606
+* Schloss Mirabell - a palace built around 1606
 * Augustiner Brauhaus
 * A few other places around Salzburg, though only the exteriors:
   * Mozarts geburtshaus and wohnhaus (where he was born and lived,
@@ -147,31 +147,31 @@ defence (it's actually never been taken by force, but was surrendered once
 during the Napoleonic War of the Second Coalition in 1800 when the ruler at the
 time bailed to Vienna). I think the only people to actually attack it were some
 peasants in 1525 who were promptly repelled. The fortress was commissioned by
-the 'Prince­Archbishops' of Salzburg.  These guys were the supreme rulers, as
-they're non­secular princes as well as archbishops of the church. One of the
+the 'Prince-Archbishops' of Salzburg.  These guys were the supreme rulers, as
+they're non-secular princes as well as archbishops of the church. One of the
 really interesting things there is the 'Salzburger Bull', which is a very loud
 mechanical organ that was used to signal various things to the town (photo
 [here](https://drive.google.com/open?id=1UH2EfaI7Gr0-EiI0hL3CbjP0iCPg7oDD2g)).
 The fortress was used as a military outpost until 1861.
 
 Next up was the Domquartier, a museum that combines a palace where the
-Prince­Archbishops used to live and do the princely thing and the cathedral
+Prince-Archbishops used to live and do the princely thing and the cathedral
 where they used to be pray and carry out their duties as archbishops. The
 residence building was initially built in 1604 and the cathedral in 1614. The
 two buildings have been joined on the second level since one of the
-Prince­Archbishops decided they didn't like getting their feet wet when walking
+Prince-Archbishops decided they didn't like getting their feet wet when walking
 between the two. The museum is setup so that you follow the path that a visitor
-would have followed when seeing the Prince­Archbishop, which mainly involved
+would have followed when seeing the Prince-Archbishop, which mainly involved
 going through several extravagant rooms. The first room is huge and not as
-fancy, but the further along you get the smaller and more expensive­feeling the
+fancy, but the further along you get the smaller and more expensive-feeling the
 rooms get, this is apparently because the more important you were the further
 into the palace you could get. The rooms all have portraits of Alexander the
 Great painted on the ceilings, which were all indirectly drawing comparisons
-between Alexander and the Prince­Archbishops you were about to see. Sadly I
-don't have any photos of the interior of the palace as photos weren't allowed.
+between Alexander and the Prince-Archbishops you were about to see. Sadly I
+don't have any photos of the interior of the palace as they weren't allowed.
 
 It was a bit of a rainy afternoon so I started making my way back to the hotel
-and decided to check out Augustiner Brauhaus on the way. It's massive ­ 5,000
+and decided to check out Augustiner Brauhaus on the way. It's massive - 5,000
 square meters internally and with a beer garden that can sit 1,400 people. The
 beer is rolled out in massive barrels from which people fill up their steins.
 
@@ -181,18 +181,18 @@ Kapuzinerberg is a mountain in the middle of town, not as heavily fortified as
 Festung Hohensalzburg. There is one castle up there (Franziskischlössl) and a
 massive wall that goes all the way back towards the river to another
 stronghold. This second stronghold could be used to defend the eastern side of
-what was at the time the only bridge across the river (Hettwer­Bastion). I
-walked the wall back from the Franziskischlössl to the Hettwer­Bastion, going
+what was at the time the only bridge across the river (Hettwer-Bastion). I
+walked the wall back from the Franziskischlössl to the Hettwer-Bastion, going
 past some signs that looked vaguely like they were warning me about something.
 Building this wall now would be a pretty impressive feat, let alone building it
-in three years from 1629­1632. I think it would take the Brisbane City Council
+in three years from 1629-1632. I think it would take the Brisbane City Council
 about 100 years and several billion of machinery. The Franziskischlössl and the
 wall were built such that there are no angles were attackers could hide without
 being under fire. The main drawbridge into Franziskischlössl is protected on
 three sides, and there were watchtowers built within shouting distance of each
-other all the way back to Hettwer­Bastion.
+other all the way back to Hettwer-Bastion.
 
-From the end of the wall I made my way to Schloss Mirabell ­ a palace built
+From the end of the wall I made my way to Schloss Mirabell - a palace built
 around 1606, also for the Prince-Archbishops. The palace building itself is
 still used by the local council and events and concerts are held there, but the
 gardens are open for all to see. One of the features of the gardens are [14
@@ -211,7 +211,7 @@ Vienna.
 
 Since arriving in Vienna on Sunday night, I have checked into our Airbnb, done
 some exploring of Vienna, and spent the day in Bratislava, the capital of
-Slovakia. Bratislava just on the Slovakia side of the Austria­Solvakia border
+Slovakia. Bratislava just on the Slovakia side of the Austria-Solvakia border
 and only an hour in the train from Vienna.
 
 We went for a walk along part of Donauinsel on Monday morning. Donauinsel is a
@@ -226,18 +226,23 @@ look at that first. The church was '[Heiliger Franz von
 Assisi](https://en.wikipedia.org/wiki/St._Francis_of_Assisi_Church,_Vienna)',
 or the St.  Francis of Assisi Church. It was built much more recently than most
 of the churches around here, construction only started in 1898! The interior
-was quite plain compared to how it looked from the outside. Photos are here.
+was quite plain compared to how it looked from the outside:
 
-After checking out the local church, we caught the U­bahn (Untergrundbahn, or
+<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAb1hMdnlla2o0Rlk/preview" width="640" height="480"></iframe>
+
+After checking out the local church, we caught the U-bahn (Untergrundbahn, or
 undergroud railway in English) to Schönbrunn Palace. The first part of the
 mansion there was built in 1548 and was normally occupied by members of the
-Habsburg Monarchy, including Franz Joseph, the longest­reigning emperor of
-Austria. It's been a museum since the fall of the Austro­Hungarian Empire in
-1918. Photos from Schönbrunn are here.
+Habsburg Monarchy, including Franz Joseph, the longest-reigning emperor of
+Austria. It's been a museum since the fall of the Austro-Hungarian Empire in 1918.
+It's a pretty striking place:
+
+<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAdGFLMS1PS3llR00/preview" width="640" height="480"></iframe>
 
 The final stop on Monday was Karlskirche (or St. Charles's Church) which was
-built between 1716 & 1737. Photos are here ­ the columns outside this church
-are pretty unusual.
+built between 1716 & 1737. The columns outside this church are pretty unusual:
+
+<iframe src="https://drive.google.com/file/d/1Tz-lBxKVuxoloYTOtmuBTKclOkUJMKRA0g/preview" width="640" height="480"></iframe>
 
 I will send another update about Bratislava, but it's Wednesday morning now so
 I'm off to explore some of Vienna :)
@@ -250,7 +255,7 @@ museum or something this afternoon.
 
 As I said in my last email that we went to Bratislava on Tuesday which was a
 really good trip. Most of our time there was spent on a free walking tour of
-the city ('free' but tips expected ­ our guide was really good though). I made
+the city ('free' but tips expected - our guide was really good though). I made
 a [map of the
 path](https://drive.google.com/open?id=1Oaj5Ssby72EnKIxQMV19fctnelY) we took.
 
@@ -261,15 +266,20 @@ would have walked straight past if our guide had not pointed it out. The back
 of the statue has lots of things from his stories. Another one is the 'man at
 work':
 
-### photo
+<figure>
+  <iframe src="https://drive.google.com/file/d/1ew2GmutCxzkSuBGqWxZO6cRjD3rid47w/preview" width="640" height="480"></iframe>
+  <figcaption>
+  Courtesy of <a href="https://commons.wikimedia.org/wiki/File:Man_at_work_(%C4%8Cumil)_statue_in_Bratislava.jpg">Frettie on Wikimedia Commons</a>.
+  </figcaption>
+</figure>
 
 This statue doesn't really have a name, but a sign warning saying 'Man at work'
 was put up after people kept tripping over him. According to the locals his
-name is Cumil and is the quintessential Bratislavian man at work, as he just
+name is Cumil and he is the quintessential Bratislavian man at work, as he just
 chills out all day and perves on the tourists. The executioner below has been
-there for quite some time in one form as another:
+present for quite some time in one form or another:
 
-### photo
+<iframe src="https://drive.google.com/file/d/1F2uD5H-N8h87JCYZagiIXhlldzWEv5hfFA/preview" width="640" height="480"></iframe>
 
 This is at the entrance to the lane where the executioner used to live (his
 house is now a massage parlour!). The lane where the executioner lived was next
@@ -286,11 +296,16 @@ Czech Republic and Slovakia happened in 1993).
 After the SNP Square we visited The Church of St. Elizabeth/The Blue Church/The
 Smurf Church which was built in 1908 and is very, very blue:
 
+<iframe src="https://drive.google.com/file/d/1BNSQDyUESeBDXfLnUnHTlCeaLaQVPi4pAw/preview" width="640" height="480"></iframe>
+<iframe src="https://drive.google.com/file/d/1ixnQAloxdYevoBl5RCzyJeyKZ8EAM2nSAA/preview" width="640" height="480"></iframe>
+
 After a final short walk we were sitting at the entrance to a building when our
 guide was telling us more about the Soviet invasion of Czechoslovakia in 1968.
-She handed the following picture around:
-
-We were sitting on the stairs of the building in the background!
+She handed around a physical copy of a [rather controversial
+photograph](https://theworldinbetween.com/2012/08/19/ladislav-bielik-and-the-iconic-photograph-of-1968-czechoslovakia/).
+I haven't included it here, as the image isn't in the public domain, but after
+looking at it we realised we were sitting on the stairs of the building in the
+background!
 
 The tour guide also told us some interesting stories about traditions in
 Slovakia. For men, easter apparently involves pouring water on the women in
@@ -299,7 +314,7 @@ time to catch a carp and keep it in the bathtub for a few days before eating it
 for a Christmas meal.
 
 I did some exploring of Vienna yesterday, but I will send another email about
-that! Photos from Bratislava are all here.
+that!
 
 ---
 
@@ -312,7 +327,7 @@ Vienna.
 I started out at the
 [Belvedere](https://en.wikipedia.org/wiki/Belvedere,_Vienna), a complex
 consisting of two palaces, a botanical garden and even a small zoo. The large
-palace now houses a museum (or an art gallery, I can't remember ­ there are so
+palace now houses a museum (or an art gallery, I can't remember - there are so
 many galleries and museums in Vienna). The palace was built was built as a
 summer residence for Prince Eugene of Savoy sometime in the early 1700's. Savoy
 was a big fan of animals and had a small zoo setup there, though that's all
@@ -359,7 +374,12 @@ walked past a bunch of places inside the Ringstrasse, including
 * [Burgtheater](https://en.wikipedia.org/wiki/Burgtheater), a theatre built in
   1888
 
-### photo
+<figure>
+  <iframe src="https://drive.google.com/file/d/1itgnadiF3M1GPMVpxGbJjQkmM0um9q2P/preview" width="640" height="480"></iframe>
+  <figcaption>
+  Google Maps view of a few of the places I visited
+  </figcaption>
+</figure>
 
 The final stop for the day was
 [Stephansdom](https://en.wikipedia.org/wiki/St._Stephen%27s_Cathedral,_Vienna)
@@ -384,7 +404,7 @@ The final interesting fact from the crypt is that when a member of the Habsburg
 family (who used to run the show here, the same family I've mentioned earlier)
 died, there used to be disagreement about where their remains should be placed,
 as there were three locations that were of particular significance to the
-family.  What ended up happening is that each location got a piece ­ their
+family.  What ended up happening is that each location got a piece - their
 heart was sealed in a chalice type thing and sent to one location, their other
 organs where sealed in another larger container and placed in the crypt at St
 Stephens, and their bodies were put into a coffin and stored at the palace (I
@@ -432,8 +452,11 @@ were a bunch of interesting things in there. In no particular order:
   tooth](https://drive.google.com/file/d/1qQOBVje06qhh4PNlrD5C_B-hkkRn8I2plQ/view?usp=sharing)
   (apparently)
 
-All the photos from the treasury are here, and some other photos from the walk
-to and from are here (I guess marijuana is legal in Austria!).
+I also walked past this store on my way home:
+
+<iframe src="https://drive.google.com/file/d/1PPKJDW-YBVvv4gdQ2IfGsjbPmVkfb0D8ug/preview" width="640" height="480"></iframe>
+
+I guess marijuana is legal in Austria!
 
 ---
 
@@ -460,10 +483,14 @@ write this email that the family who established Liechtenstein the country (or
 principality?) took their family name from the castle, and the country is named
 after the family. The castle wasn't open for tours, so I just had a walk around
 there and the surrounding forest. There was a amphitheater built near the
-castle around 1800 which is now all overgrown, it was pretty cool walking
+castle around 1800 which is now all overgrown, it was surreal walking
 through it.
 
-Photos are here.
+<iframe src="https://drive.google.com/file/d/16duZlchZCt8x0SffeUvqDcKewYOnv8Dl0A/preview" width="640" height="480"></iframe>
+
+You can see almost the whole structure in the background of the image below.
+
+<iframe src="https://drive.google.com/file/d/18naK_i7QP6Ogndxd9E9zGvqzyk4AcS_GWw/preview" width="640" height="480"></iframe>
 
 ---
 
@@ -493,7 +520,7 @@ peak, and I didn't have loads of time, so I powered from Berghaus
 Hochschneeberg (1800m) to Klosterwappenhohle (2076m) and Kaiserstein (2061m)
 and then back:
 
-Inline image 1
+<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAU05yTngyTjRFQjNTTElDNmxJVk1UdjNEcmY4/preview" width="640" height="480"></iframe>
 
 (the map above is from
 [OpenStreetMap](https://www.openstreetmap.org/way/29041905#map=15/47.7645/15.8147),
@@ -501,10 +528,14 @@ which is an open source alternative to Google Maps and often has more detailed
 walking/hiking/biking tracks).
 
 I was a little underprepared for how windy and cold it would be up there (there
-is still some snow that hasn't melted yet) but it was worth it, the view was
-amazing. I took a load of photos and a few videos of the clouds moving over the
-mountain, you can hear my jacket flapping in the wind. I haven't deleted all
-the dodgy photos yet so there are some shockers.
+is still some snow that hasn't melted yet). Here is me with my hands firmy in
+the pockets of my inadequate jacket:
 
-The Schneeberg photos are here, and the parent folder that has all of the pics
-so far is still at this link.
+<iframe src="https://drive.google.com/file/d/1uoLZw2r4mlSxbnqX_lSfmRXGokiAgUXGkQ/preview" width="640" height="480"></iframe>
+
+The cold was worth it though, the views were amazing:
+
+<iframe src="https://drive.google.com/file/d/1drELJ5Ns0BHYC1BayfKTb8KGquKn1nsFcQ/preview" width="640" height="480"></iframe>
+<iframe src="https://drive.google.com/file/d/1vKp5RruWDDRjQFufizoj2Mk4zd1RMz3d5A/preview" width="640" height="480"></iframe>
+<iframe src="https://drive.google.com/file/d/1yavnc5LQUfes6cw-Gmi96ltWA7WQw5QJ5A/preview" width="640" height="480"></iframe>
+<iframe src="https://drive.google.com/file/d/1MTf55i_-kGfXBJHb_rumbQ5ZS30ml3Em-A/preview" width="640" height="480"></iframe>
