Use local images rather than Google Drive

--- a/_posts/2016-07-21-europe.md
+++ b/_posts/2016-07-21-europe.md
@@ -77,7 +77,7 @@ despite plans to go from one end to the other. There is and really cool spot at
 the start of the gardens where the water flows in (not sure if it's flowing
 through or recycled through the canal system in the park - maybe both), there
 were people surfing there! They've set something up that makes an artificial
-wave across the canal, I got a couple of videos #####.
+wave across the canal.
 
 In the middle of the gardens is this relic of a bit of a China craze that went
 through Munich a while back. There is this pagoda type thing, and all around is
@@ -119,7 +119,7 @@ time from Salzburg to Vienna. I have internet on this train, and it's probably
 faster than what 99% of Australian ISPs provide (thanks Tony). It made me laugh
 when I connected to WiFi and saw this immediately:
 
-<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAZ2ExdmprNlhDcEdSZHJLZlVxeTA1U0hXZ3hv/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/0B3HUADVbsoZAZ2ExdmprNlhDcEdSZHJLZlVxeTA1U0hXZ3hv.png" %}
 
 ... 'this is of course free'. In Aus this would cost an arm and a leg and take
 four hours to set up.
@@ -228,7 +228,7 @@ or the St.  Francis of Assisi Church. It was built much more recently than most
 of the churches around here, construction only started in 1898! The interior
 was quite plain compared to how it looked from the outside:
 
-<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAb1hMdnlla2o0Rlk/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/0B3HUADVbsoZAb1hMdnlla2o0Rlk.jpg" %}
 
 After checking out the local church, we caught the U-bahn (Untergrundbahn, or
 undergroud railway in English) to Schönbrunn Palace. The first part of the
@@ -237,12 +237,12 @@ Habsburg Monarchy, including Franz Joseph, the longest-reigning emperor of
 Austria. It's been a museum since the fall of the Austro-Hungarian Empire in 1918.
 It's a pretty striking place:
 
-<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAdGFLMS1PS3llR00/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/0B3HUADVbsoZAdGFLMS1PS3llR00.jpg" %}
 
 The final stop on Monday was Karlskirche (or St. Charles's Church) which was
 built between 1716 & 1737. The columns outside this church are pretty unusual:
 
-<iframe src="https://drive.google.com/file/d/1Tz-lBxKVuxoloYTOtmuBTKclOkUJMKRA0g/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/1Tz-lBxKVuxoloYTOtmuBTKclOkUJMKRA0g.jpg" %}
 
 I will send another update about Bratislava, but it's Wednesday morning now so
 I'm off to explore some of Vienna :)
@@ -266,12 +266,8 @@ would have walked straight past if our guide had not pointed it out. The back
 of the statue has lots of things from his stories. Another one is the 'man at
 work':
 
-<figure>
-  <iframe src="https://drive.google.com/file/d/1ew2GmutCxzkSuBGqWxZO6cRjD3rid47w/preview" width="640" height="480"></iframe>
-  <figcaption>
-  Courtesy of <a href="https://commons.wikimedia.org/wiki/File:Man_at_work_(%C4%8Cumil)_statue_in_Bratislava.jpg">Frettie on Wikimedia Commons</a>.
-  </figcaption>
-</figure>
+{% include figure.html src="/public/images/2016/07/1ew2GmutCxzkSuBGqWxZO6cRjD3rid47w.jpg" caption='Courtesy of <a href="https://commons.wikimedia.org/wiki/File:Man_at_work_(%C4%8Cumil)_statue_in_Bratislava.jpg">Frettie on Wikimedia Commons</a>' %}
+
 
 This statue doesn't really have a name, but a sign warning saying 'Man at work'
 was put up after people kept tripping over him. According to the locals his
@@ -279,7 +275,7 @@ name is Cumil and he is the quintessential Bratislavian man at work, as he just
 chills out all day and perves on the tourists. The executioner below has been
 present for quite some time in one form or another:
 
-<iframe src="https://drive.google.com/file/d/1F2uD5H-N8h87JCYZagiIXhlldzWEv5hfFA/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/1F2uD5H-N8h87JCYZagiIXhlldzWEv5hfFA.jpg" %}
 
 This is at the entrance to the lane where the executioner used to live (his
 house is now a massage parlour!). The lane where the executioner lived was next
@@ -296,8 +292,8 @@ Czech Republic and Slovakia happened in 1993).
 After the SNP Square we visited The Church of St. Elizabeth/The Blue Church/The
 Smurf Church which was built in 1908 and is very, very blue:
 
-<iframe src="https://drive.google.com/file/d/1BNSQDyUESeBDXfLnUnHTlCeaLaQVPi4pAw/preview" width="640" height="480"></iframe>
-<iframe src="https://drive.google.com/file/d/1ixnQAloxdYevoBl5RCzyJeyKZ8EAM2nSAA/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/1BNSQDyUESeBDXfLnUnHTlCeaLaQVPi4pAw.jpg" %}
+{% include figure.html src="/public/images/2016/07/1ixnQAloxdYevoBl5RCzyJeyKZ8EAM2nSAA.jpg" %}
 
 After a final short walk we were sitting at the entrance to a building when our
 guide was telling us more about the Soviet invasion of Czechoslovakia in 1968.
@@ -374,12 +370,7 @@ walked past a bunch of places inside the Ringstrasse, including
 * [Burgtheater](https://en.wikipedia.org/wiki/Burgtheater), a theatre built in
   1888
 
-<figure>
-  <iframe src="https://drive.google.com/file/d/1itgnadiF3M1GPMVpxGbJjQkmM0um9q2P/preview" width="640" height="480"></iframe>
-  <figcaption>
-  Google Maps view of a few of the places I visited
-  </figcaption>
-</figure>
+{% include figure.html src="/public/images/2016/07/1itgnadiF3M1GPMVpxGbJjQkmM0um9q2P.png" caption='Google Maps view of a few of the places I visited' %}
 
 The final stop for the day was
 [Stephansdom](https://en.wikipedia.org/wiki/St._Stephen%27s_Cathedral,_Vienna)
@@ -454,7 +445,7 @@ were a bunch of interesting things in there. In no particular order:
 
 I also walked past this store on my way home:
 
-<iframe src="https://drive.google.com/file/d/1PPKJDW-YBVvv4gdQ2IfGsjbPmVkfb0D8ug/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/1PPKJDW-YBVvv4gdQ2IfGsjbPmVkfb0D8ug.jpg" %}
 
 I guess marijuana is legal in Austria!
 
@@ -486,11 +477,11 @@ there and the surrounding forest. There was a amphitheater built near the
 castle around 1800 which is now all overgrown, it was surreal walking
 through it.
 
-<iframe src="https://drive.google.com/file/d/16duZlchZCt8x0SffeUvqDcKewYOnv8Dl0A/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/16duZlchZCt8x0SffeUvqDcKewYOnv8Dl0A.jpg" %}
 
 You can see almost the whole structure in the background of the image below.
 
-<iframe src="https://drive.google.com/file/d/18naK_i7QP6Ogndxd9E9zGvqzyk4AcS_GWw/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/18naK_i7QP6Ogndxd9E9zGvqzyk4AcS_GWw.jpg" %}
 
 ---
 
@@ -520,7 +511,7 @@ peak, and I didn't have loads of time, so I powered from Berghaus
 Hochschneeberg (1800m) to Klosterwappenhohle (2076m) and Kaiserstein (2061m)
 and then back:
 
-<iframe src="https://drive.google.com/file/d/0B3HUADVbsoZAU05yTngyTjRFQjNTTElDNmxJVk1UdjNEcmY4/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/0B3HUADVbsoZAU05yTngyTjRFQjNTTElDNmxJVk1UdjNEcmY4.png" %}
 
 (the map above is from
 [OpenStreetMap](https://www.openstreetmap.org/way/29041905#map=15/47.7645/15.8147),
@@ -531,11 +522,11 @@ I was a little underprepared for how windy and cold it would be up there (there
 is still some snow that hasn't melted yet). Here is me with my hands firmy in
 the pockets of my inadequate jacket:
 
-<iframe src="https://drive.google.com/file/d/1uoLZw2r4mlSxbnqX_lSfmRXGokiAgUXGkQ/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/1uoLZw2r4mlSxbnqX_lSfmRXGokiAgUXGkQ.jpg" %}
 
 The cold was worth it though, the views were amazing:
 
-<iframe src="https://drive.google.com/file/d/1drELJ5Ns0BHYC1BayfKTb8KGquKn1nsFcQ/preview" width="640" height="480"></iframe>
-<iframe src="https://drive.google.com/file/d/1vKp5RruWDDRjQFufizoj2Mk4zd1RMz3d5A/preview" width="640" height="480"></iframe>
-<iframe src="https://drive.google.com/file/d/1yavnc5LQUfes6cw-Gmi96ltWA7WQw5QJ5A/preview" width="640" height="480"></iframe>
-<iframe src="https://drive.google.com/file/d/1MTf55i_-kGfXBJHb_rumbQ5ZS30ml3Em-A/preview" width="640" height="480"></iframe>
+{% include figure.html src="/public/images/2016/07/1drELJ5Ns0BHYC1BayfKTb8KGquKn1nsFcQ.jpg" %}
+{% include figure.html src="/public/images/2016/07/1vKp5RruWDDRjQFufizoj2Mk4zd1RMz3d5A.jpg" %}
+{% include figure.html src="/public/images/2016/07/1yavnc5LQUfes6cw-Gmi96ltWA7WQw5QJ5A.jpg" %}
+{% include figure.html src="/public/images/2016/07/1MTf55i_-kGfXBJHb_rumbQ5ZS30ml3Em-A.jpg" %}
