--- a/_posts/2016-07-21-europe.md
+++ b/_posts/2016-07-21-europe.md
@@ -463,8 +463,8 @@ bombed.
 
 Currently 50,000 L of water have to be pumped out every day to keep the water
 level constant. The water is super clean and apparently drinkable, though very
-mineral heavy. It was also really cold down there - only 9° C! The guide was
-doing his thing in German, but I heard someone else translating for their
+mineral heavy. It was also surprisingly cold down there at only 9 °C. The guide
+was doing his thing in German, but I heard someone else translating for their
 friend and asked if I could listen in.
 
 Burg Lichtenstein was also nearby. It was originally built during the 12th
