--- a/_drafts/2018-05-09-nyc.md
+++ b/_drafts/2018-05-09-nyc.md
@@ -13,20 +13,27 @@ flight there, it was a successful trip!
 Saturday played out as a busy day! In order:
 
 * Run in Central Park
+{% include figure.html src="/public/images/2018/05/nyc/central-park-lake.jpg" %}
 * Grand Central Station
+{% include figure.html src="/public/images/2018/05/nyc/grand-central.jpg" %}
 * [The High Line](http://www.thehighline.org/) - a park that's been built on
   decommissioned overhead train tacks
 * Oculus - a $4 billion transit station
+{% include figure.html src="/public/images/2018/05/nyc/oculus.jpg" %}
 * 9/11 Memorial - pretty sobering to think there were two massive buildings
   full of people where the monuments now stand
 * One World Observatory, 102 floors up
+{% include figure.html src="/public/images/2018/05/nyc/one-wtc.jpg" %}
+{% include figure.html src="/public/images/2018/05/nyc/one-wtc-view.jpg" %}
 * Stone Street - a street in the historic district with lots of old bars, it
   was absolutely packed though because of Cinco de Mayo
+{% include figure.html src="/public/images/2018/05/nyc/stone-street.jpg" %}
 * [The Dead Rabbit Grocery and Grog](https://www.deadrabbitnyc.com/about/),
   which won a few 'worlds best bar' awards in 2016
 * Wall St
 * [Trinity Church](https://en.wikipedia.org/wiki/Trinity_Church_(Manhattan))
 * [Staten island ferry](http://www.siferry.com/)
+{% include figure.html src="/public/images/2018/05/nyc/ferry-view.jpg" %}
 * Times Square
 * Dinner at Ipanema
 * A Housewarming in Brooklyn, where we ended the day
@@ -34,5 +41,7 @@ Saturday played out as a busy day! In order:
 Sunday was a quieter day. We spent most of our time in Dumbo (Down Under the
 Manhattan Bridge Overpass), an area in Brooklyn with pretty great views of the
 city. We went to [Grimaldi's pizza](http://www.grimaldis.com/index.html), which
-is one of the original pizza places in NYC. Our pizza meal turned out to be
-breakfast, lunch and dinner for Sunday 🤣
+is one of the old, amazing pizza places in NYC. A walk across the Brooklyn
+Bridge closed out the weekend:
+
+{% include figure.html src="/public/images/2018/05/nyc/brooklyn-bridge-selfie.jpg" %}
