Fix error in Europe post

--- a/_posts/2016-07-21-europe.md
+++ b/_posts/2016-07-21-europe.md
@@ -409,7 +409,7 @@ to close the crypts for a week because of the smell.
 
 On Thursday afternoon I visited [Kaiserliche
 Schatzkammer](https://en.wikipedia.org/wiki/Imperial_Treasury,_Vienna) (the
-Imperial Treasury) in the afternoon.
+Imperial Treasury).
 
 The treasury was split into two sections, secular and ecclesiastical. There
 were a bunch of interesting things in there. In no particular order:
