2019 Q1 travel post (WIP)

--- a/_drafts/2019-03-31-2019-q1-travel.md
+++ b/_drafts/2019-03-31-2019-q1-travel.md
@@ -55,7 +55,7 @@ Family Galleries of Medieval and Renaissance Art, Arms, and
 Armor](https://www.artic.edu/exhibitions/2353/the-deering-family-galleries-of-medieval-and-renaissance-art-arms-and-armor)
 (an ongoing exhibit) was another highlight, and I was amazed at the detail in
 the 68 [Thorne Miniature
-Rooms](https://www.artic.edu/departments/PC-15/thorne-miniature-rooms) as well.
+Rooms](https://www.artic.edu/departments/PC-15/thorne-miniature-rooms).
 
 {% include figure.html src="/public/images/2019/q1/thorne-room.jpg" %}
 
@@ -75,12 +75,32 @@ from the [The Skydeck](https://theskydeck.com/) are spectacular:
 ### Museum of Science and Industry
 
 I think the [Museum of Science and Industry](https://www.msichicago.org) in
-Chicago is my new favourite, with the [Deutsches Museum]({{ "2016/07/europe/" |
+Chicago is my new favourite museum, with the [Deutsches Museum]({{ "2016/07/europe/" |
 relative_url }}) in Munich a close second.
 
 {% include figure.html src="/public/images/2019/q1/field-museum-exterior.jpg" %}
 
+It's absolutely huge, I could easily spend far more than a day there. A few
+highlights, in no particular order:
 
+<figure>
+  <video style="max-width: 100%; display: block;" autoplay loop muted>
+    <source src="{{ "/public/images/2019/q1/msi-avalanche.webm" | relative_url }}" type="video/webm; codecs=vp9">
+  </video>
+  <figcaption>Avalance simulation in the Science Storms exhibit.</figcaption>
+</figure>
+
+{% include figure.html src="/public/images/2019/q1/msi-mirror-maze.jpg" caption="The mirror maze in Numbers in Nature exhibit." %}
+{% include figure.html src="/public/images/2019/q1/msi-storm.mp4" %}
+
+<figure>
+  <video style="max-width: 100%; display: block;" autoplay loop muted>
+    <source src="{{ "/public/images/2019/q1/msi-storm.webm" | relative_url }}" type="video/webm; codecs=vp9">
+  </video>
+  <figcaption>Tornado simulation in the Science Storms exhibit.</figcaption>
+</figure>
+
+{% include figure.html src="/public/images/2019/q1/msi-u-505.jpg" caption="The U-505 submarine, captured during World War II" %}
 
 ### Shedd Aquarium
 
@@ -90,11 +110,11 @@ relative_url }}) in Munich a close second.
 
 ### ... spring?
 
-I've been warned that warm weather in Chicago in March is a trap, but as I'm
-writing this it's closer to the end of April I'm hopeful the worst of the cold
-weather is finished. As a reference, here's a recent photo of Maggie Daley Park
-& Grant Park - it looks a little more inviting than the photo earlier in this
-post!
+I've been warned that March warm weather in Chicago only lulls you into a false
+sense of security. As I'm writing this it's closer to the end of April & I'm
+hopeful the worst of the cold weather is finished. As a reference, here's a
+recent photo of Maggie Daley Park & Grant Park - it looks a little more
+inviting than the photo earlier in this post!
 
 {% include figure.html src="/public/images/2019/q1/chicago-spring.jpg" %}
 
