2019 Q1 travel post (WIP)

--- a/_drafts/2019-03-31-2019-q1-travel.md
+++ b/_drafts/2019-03-31-2019-q1-travel.md
@@ -8,6 +8,9 @@ I didn't do a load of travel in the first three months of 2019, mostly due to
 being staffed in Chicago & wanting to spend some time there. Also, there isn't
 a lot of easily accessible hiking in winter!
 
+This post covers what I was up to for the first three months of the year, and
+is mostly about Chicago.
+
 Chicago
 -------
 
@@ -90,8 +93,11 @@ highlights, in no particular order:
   <figcaption>Avalance simulation in the Science Storms exhibit.</figcaption>
 </figure>
 
-{% include figure.html src="/public/images/2019/q1/msi-mirror-maze.jpg" caption="The mirror maze in Numbers in Nature exhibit." %}
-{% include figure.html src="/public/images/2019/q1/msi-storm.mp4" %}
+{% include figure.html src="/public/images/2019/q1/msi-mirror-maze.jpg" caption="Mirror maze in Numbers in Nature exhibit." %}
+
+The mirror maze was oddly peaceful for the few seconds I was in there alone!
+For the rest of the time I was just trying to avoid running into the kids that
+were barrelling though.
 
 <figure>
   <video style="max-width: 100%; display: block;" autoplay loop muted>
@@ -100,13 +106,17 @@ highlights, in no particular order:
   <figcaption>Tornado simulation in the Science Storms exhibit.</figcaption>
 </figure>
 
-{% include figure.html src="/public/images/2019/q1/msi-u-505.jpg" caption="The U-505 submarine, captured during World War II" %}
-
-### Shedd Aquarium
-
+{% include figure.html src="/public/images/2019/q1/msi-u-505.jpg" caption="U-505 submarine, captured during World War II." %}
 
 ### St Patrick's Day
 
+St Patrick's Day in Chicago was an experience ... I knew it was a huge event,
+but I didn't expect the streets to be packed from 7:30 AM.
+
+{% include figure.html
+  src="/public/images/2019/q1/green-river.jpg"
+  caption="The Chicago River is dyed a vibrant green on St Patrick's day."
+%}
 
 ### ... spring?
 
@@ -118,17 +128,99 @@ inviting than the photo earlier in this post!
 
 {% include figure.html src="/public/images/2019/q1/chicago-spring.jpg" %}
 
-
 LA & Spartan Race
 =================
+
+I visited LA briefly in December on a trip to go hiking in [Joshua Tree
+National Park](https://www.nps.gov/jotr/index.htm), but most of the time in LA
+itself was spent sitting in traffic.
+
+I went back in January to do the Spartan SoCal Sprint just outside of LA, and
+had a chance to see a little more of LA itself.
+
+[Griffith Observatory](http://www.griffithobservatory.org/) is definitely worth
+a visit, for the exhibits as well as the views of LA.
+
+{% include figure.html src="/public/images/2019/q1/la-skyline.jpg" %}
+{% include figure.html src="/public/images/2019/q1/griffith-observatory-evening.jpg" %}
+
+On Saturday we spent some time in Venice Beach area, including the Venice
+Canals and a ride along the boardwalk and ocean front walk. It was a nice
+change from the winter in Chicago!
+
+{% include figure.html src="/public/images/2019/q1/canals.jpg" %}
+{% include figure.html src="/public/images/2019/q1/santa-monica-pier.jpg" %}
+
+<figure>
+  <video style="max-width: 100%; display: block;" autoplay loop muted>
+    <source src="{{ "/public/images/2019/q1/venice-ride.webm" | relative_url }}" type="video/webm; codecs=vp9">
+  </video>
+</figure>
 
 Seattle
 =======
 
+I had planned a trip to Chicago the weekend after the polar vortex hit Chicago,
+but my flight out was cancelled due to the weather. I still made it out of
+Chicago the next day, but that made for a fairly short trip, so I changed my
+plans to spend the time in Seattle itself and ditched the hiking I was planning
+in Mt Rainier National Park.
+
+I stayed right near [Pike Place
+Market](https://en.m.wikipedia.org/wiki/Pike_Place_Market) which turned out to
+be a great spot.
+
+{% include figure.html src="/public/images/2019/q1/pike-place-market.jpg" %}
+
+Some notable places:
+
+- [Piroshky Piroshky](https://www.piroshkybakery.com/) bakery: I may have
+  returned here more than once, fodder was delicious but not entirely
+  compatible with my desire to be somewhat healthy 🤣
+- [The Gum Wall](https://en.wikipedia.org/wiki/Gum_Wall): one of the most germ
+  ridden attractions in existence
+{% include figure.html src="/public/images/2019/q1/gum-wall.jpg" %}
+- The original Starbucks
+- Underground tour: it was interesting hearing about how Seattle was built, it
+  is honestly a miracle they didn't just give up.
+  [Wikipedia](https://en.wikipedia.org/wiki/Seattle_Underground) has some info on
+  the underground.
+- Seattle Center: I'd like to go back here, there is loads to do. It was the
+  site of the 1962 World's Fair. The Space Needle, MoPOP and the Chihuly Garden
+  and Glass are apparently all worth a visit, but I just walked around the area
+  without going in.
+
 South Lake Tahoe
 ================
+
+My first trip in March was to [South Lake
+Tahoe](https://en.wikipedia.org/wiki/South_Lake_Tahoe,_California) for a
+weekend of skiing. There was a little more snow there than I've seen in
+Australia before 😂.
+
+The base of the resort is at 1,907 m and the top is 3,068 m, so it isn't super
+high but its location near the lake means lots of snow (the peak of Mount
+Kosciuszko is 2,228 m, so most of the Thredbo resort in Australia is less than
+2,000 m).
+
+{% include figure.html src="/public/images/2019/q1/tahoe-from-heavenly.jpg" %}
+{% include figure.html src="/public/images/2019/q1/cold.jpg" %}
+{% include figure.html src="/public/images/2019/q1/tahoe-lake level.jpg" %}
+{% include figure.html src="/public/images/2019/q1/tahoe-nevada.jpg" %}
+{% include figure.html src="/public/images/2019/q1/tahoe-california.jpg" %}
 
 Toronto
 =======
 
+The second trip for March was to Toronto, again a short trip so I really only
+had time to explore part of Old Toronto near where I was staying:
+
+* St. Lawrence Market
+* Distillery District
+* Yonge-Dundas Square
+* CF Toronto Eaton Centre
+* Kensington Market
+
+{% include figure.html src="/public/images/2019/q1/toronto-sign.jpg" %}
+{% include figure.html src="/public/images/2019/q1/cn-tower.jpg" %}
 
